# barrier-rust

./: .gitignore  Cargo.toml  README.md
parser/: Cargo.toml
parser/src/: lib.rs
prototypes/: absmouse.c
src/: input.rs  lib.rs  main.rs  parser.rs
