[package]
name = "barrier"
version = "0.1.0"
authors = ["Brendan Ball <ball.brendan50@gmail.com>"]
edition = "2018"
default-run = "barrierc"

[dependencies]
hex-literal = "0.2.0"
nom = "5.0.0"
uinput = "0.1.3"
evdev-sys = "0.2.0"
evdev-rs = "0.2.0"
libc = "0.2.62"
nix = "0.15.0"

[patch.crates-io]
evdev-sys = { path = '/home/brendan/development/scratch/evdev-rs/evdev-sys' }
evdev-rs = { path = '/home/brendan/development/scratch/evdev-rs' }
