[package]
name = "barrier"
version = "0.1.0"
authors = ["Brendan Ball <ball.brendan50@gmail.com>"]
description = """
Barrier at https://github.com/debauchee/barrier is a fork of synergy.
This is a complete rewrite in rust.
"""
license = "GNU General Public License v2.0"
edition = "2018"
default-run = "barrierc"
readme = "README.md"
repository = "https://github.com/brendanball/barrier-rust"

[dependencies]
hex-literal = "0.2.0"
nom = "5.0.0"
uinput = "0.1.3"
evdev-sys = "0.2.0"
evdev-rs = "0.2.0"
libc = "0.2.62"
config = "0.9.3"
xdg = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.5.0"
nix = "0.13.0"
